media qurries added

--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
           </div>
         </div>
       </section>
-      <section id="mobileOnly">
+      <article id="mobileOnly">
         <button type="button" value="" class="buttons">View All</button>
-      </section>
+      </article>
     </main>
     <footer>
       <p id="headingSmall">Goal</p>
